Home Page finished
Still needs urls inputted correctly for the other webpages and new links added for the innovative webpages, plus more info in the description

--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -21,12 +21,15 @@
     <img src="Images/storm.jpg" width="1920" height="100"/>
 </header>
     <body>
-        <div class="col-6 col-s-12">
+    <div class="content">
+        <div class="col-11 col-s-12">
             <p>This website has been created so
                 that you can review Eaurthquakes as they happen in real time using 
                 Google Maps. You can also view the weather in certain parts of the world
                 using long and lat, or just by searching for the place. Below is a link to the
                 project specification.</p>
+            <a href="https://drive.google.com/drive/folders/1-NOZYNxYP2NHd_v7YJ-yJUfX2cSg7Bka?usp=sharing%20">Link to Project Specification</a>
         </div>
+    </div>
     </body>
 <html>
