--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquakes and Weather - Home</title>
+        <title>Earthquakes and Weather - Authors</title>
     </head>
     <header>
     <div class="test">
@@ -18,18 +18,10 @@
             </a>  
         </div>
     </div>
-    <img src="Images/storm.jpg" width="1920" height="100"/>
 </header>
     <body>
     <div class="content">
-        <div class="col-11 col-s-12">
-            <p>This website has been created so
-                that you can review Earthquakes as they happen in real time using 
-                Google Maps. You can also view the weather in certain parts of the world
-                using long and lat, or just by searching for the place. Below is a link to the
-                project specification.</p>
-            <a href="https://drive.google.com/drive/folders/1-NOZYNxYP2NHd_v7YJ-yJUfX2cSg7Bka?usp=sharing%20">Link to Project Specification</a>
-        </div>
+        
     </div>
     </body>
 <html>
