--- a/WEBSITE/tsunamis.html
+++ b/WEBSITE/tsunamis.html
@@ -1,8 +1,8 @@
 <html>
-<link href="style_sheets.css" rel="stylesheet" type="text/css">
+<link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="hamburgerMenu.js"></script>
+<script src="scripts/hamburgerMenu.js"></script>
     <head>
         <title>Earthquakes and Weather - Tsunamis</title>
     </head>
