--- a/WEBSITE/earthquakes.html
+++ b/WEBSITE/earthquakes.html
@@ -14,7 +14,7 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="tsunamis.html">Tsunamis</a>
+            <a href="uvIndex.html">Tsunamis</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
