--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="uvIndex.html">Tsunamis</a>
+            <a href="uvIndex.html">UV Index</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
