--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquakes and Weather - Tsunamis</title>
+        <title>Earthquakes and Weather - UV Index</title>
     </head>
     <header>
     <div class="test">
