--- a/WEBSITE/earthquakes.html
+++ b/WEBSITE/earthquakes.html
@@ -10,24 +10,30 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnav" id="myTopnav">
+        <div class="topnavEQ" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="uvIndex.html">UV Index</a>
+            <a href="tsunamis.html">Tsunamis</a>
             <a href="authors.html">Authors</a>
+            <a href="">Floods</a>
+            <a href="">Plane Tracker</a>
+            <a href="">Kiera?</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
         </div>
     </div>
+    <img src="Images/version2eqpage.png" width="1920" height="100"/>
 </header>
     <body>
-    <!--<div class="content">-->
+    <div class="contentEQ">
         <button type="button" id="earthquakes">Click me</button>
+        <button type="button" id="hour">Past Hour</button>
+        <button type="button" id="all">All Earthquakes</button>
         <div id="error"></div>
         <script src="scripts/googleMapsScript.js"></script>
         <div id="mapLayout"></div>
-        <!--</div>-->
+    </div>
     </body>
 <html>
