--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -12,14 +12,17 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="uvIndex.html">UV Index</a>
+            <a href="tsunamis.html">Tsunamis</a>
+            <a href="">Floods</a>
+            <a href="">Plane Tracker</a>
+            <a href="">Kiera?</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
         </div>
     </div>
-    <img src="Images/storm.jpg" width="1920" height="100"/>
+    <img src="Images/home2.png" width="1920" height="100"/>
 </header>
     <body>
     <div class="content">
