--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -23,9 +23,29 @@
         </div>
     </div>
 </header>
+
     <body>
-    <div class="content">
-        
-    </div>
+	//<div class="jumbotron" style="margin-bottom:0px; color:white; background-color: #4aa1f3;">
+		<h2 class="text-center" style="font-size:50px; font-weight:600;">Get Current Weather</h2>
+	//</div>
+	
+	<div class="container">
+	<div class="row" style="margin-bottom:20px;">
+		<h3 class="text-center text-primary">Enter City Name</h3>
+		<span id="error"></span>
+	</div>
+	
+	<div class="row form-group form-inline" id="rowDiv">
+		<input type="text" name="city" id="city" class="form-control" placeholder="City Name">
+		<button id="submitWeather" class="btn btn-primary">Search City</button>
+		</div>
+		
+		<div id="show"</div>
+	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<div class="weather_image">
+	<script src="scripts/weather.js"></script>
+	</div>
+	
     </body>
 <html>
