--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="tsunamis.html">Tsunamis</a>
+            <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
             <a href="">Kiera?</a>
@@ -22,7 +22,7 @@
             </a>  
         </div>
     </div>
-    <img src="Images/home2.png" width="1920" height="100"/>
+    <img class="header" src="Images/home2.png" width="1920" height="100"/>
 </header>
     <body>
     <div class="content">
