--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -13,6 +13,9 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
+            <a href="">Floods</a>
+            <a href="">Plane Tracker</a>
+            <a href="">Kiera?</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
