--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="tsunamis.html">Tsunamis</a>
+            <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
             <a href="">Kiera?</a>
