--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -12,7 +12,7 @@
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
-            <a href="tsunamis.html">Tsunamis</a>
+            <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
             <a href="">Kiera?</a>
@@ -25,9 +25,9 @@
 </header>
 
     <body>
-	//<div class="jumbotron" style="margin-bottom:0px; color:white; background-color: #4aa1f3;">
+	<div class="jumbotron" style="margin-bottom:0px; color:white; background-color: #4aa1f3;">
 		<h2 class="text-center" style="font-size:50px; font-weight:600;">Get Current Weather</h2>
-	//</div>
+	</div>
 	
 	<div class="container">
 	<div class="row" style="margin-bottom:20px;">
