--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -1,6 +1,7 @@
 <html>
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="css_files/owfont-regular.css" rel="stylesheet" type="text/css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
@@ -22,22 +23,22 @@
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/weather_header.png" width="1920" height="100"/>
+	<img class="header" src="Images/test_banner.jpg"/>
 </header>
 
     <body>
 	<div class="container">
 	<div class="row" style="margin-bottom:20px;">
-		<h3 class="text-center text-primary">Enter City Name</h3>
-		<span id="error"></span>
+		<h1 class="text-center text-primary">Enter City Name</h1>
 	</div>
 	
 	<div class="row form-group form-inline" id="rowDiv">
 		<input type="text" name="city" id="city" class="form-control" placeholder="City Name">
-		<button id="submitWeather" class="btn btn-primary">Search City</button>
+		<button id="submitWeather" class="btn btn-primary">Search</button>
 		</div>
 		
-		<div id="show"</div>
+		<div id="error"></div>
+		<div id="show"></div>
 		
 		<div class="weather_image">
 	<script src="scripts/weather.js"></script>
