--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -23,7 +23,7 @@
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/test_banner.jpg"/>
+	<img class="header" src="Images/weatherforecast.png"/>
 </header>
 
     <body>
