Tornados page added

--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -9,25 +9,24 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnav" id="myTopnav">
+        <div class="topnavEQ" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
-            <a href="">Kiera?</a>
+            <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/weatherforecast.png"/>
+	<img class="header" src="Images/weatherForcast2.png"/>
 </header>
 
     <body>
-	<div class="container">
 	<div class="row" style="margin-bottom:20px;">
 		<h1 class="text-center text-primary">Enter City Name</h1>
 	</div>
@@ -45,4 +44,4 @@
 	</div>
 	
     </body>
-<html>
+</html>
