--- a/WEBSITE/earthquakes.html
+++ b/WEBSITE/earthquakes.html
@@ -19,7 +19,7 @@
             <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
-            <a href="">Kiera?</a>
+            <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
