--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -39,8 +39,8 @@
 	</div>
 	
 	<div class="row form-group form-inline" id="rowDiv">
-		<input type="number" step="0.01" name="lat" id="lat" class="form-control" placeholder="Latitude">
-        		<input type="number" step="0.01" name="lon" id="lon" class="form-control" placeholder="Longitude">
+		<input type="number" name="lat" id="lat" class="form-control" placeholder="Latitude">
+        		<input type="number" name="lon" id="lon" class="form-control" placeholder="Longitude">
 		<button id="submitUV" class="btn btn-primary">Find Current UVI</button>
 		</div>
         
