--- a/Flood/Flood.html
+++ b/Flood/Flood.html
@@ -24,6 +24,17 @@
 </header>
     <body>
     <!--<div class="content">-->
+	
+		<p>
+		Flood Data is displayed in 5 different categories,<br>
+		County - Showing the Area of the flood in England.<br>
+		Message - A Small Description of the flood, If undefined is shown then there is no description of the flood at current time.<br>
+		Severity Level - Saying how serious the flood.<br>
+		Is Tidal? - True stating that the water is still rising and False stating that it is not.<br>
+		Severity level number - A number range of 1 to 4 stating how bad the flood is 4 being very serious and 1 being the least serious.<br>
+		
+		
+		</p>
 		
         <button type="button" id="Floods">Show Flood Data</button>
 		<div id="show"</div>
@@ -31,6 +42,8 @@
 		<script src="FloodScript.js"></script>
         <div id="mapLayout"></div>
 		<div id="show"</div>
+		
+		
 		
         <!--</div>-->
     </body>
