--- a/WEBSITE/weather.html
+++ b/WEBSITE/weather.html
@@ -24,7 +24,7 @@
             </a>  
         </div>
     </div>
-	<img class="header" src="Images/weatherForcast2.png"/>
+	<img class="header" src="Images/weatherForcast.png"/>
 </header>
 
     <body>
