--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquakes and Weather - Authors</title>
+        <title>Authors</title>
     </head>
     <header>
     <div class="test">
@@ -15,17 +15,59 @@
             <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
             <a href="">Plane Tracker</a>
-            <a href="">Kiera?</a>
+            <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
         </div>
     </div>
+    <img class="header" src="Images/home2.png" width="1920" height="100"/>
 </header>
     <body>
     <div class="content">
-        
-    </div>
+    
+	<h2>Authors</h2>
+	
+	<div class="author_header">
+	<img src="images/calum_header.png" alt="calum_image">
+	</div>
+	<h3>Calum McDonald</h3>
+	<div class="authorText">
+	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	</div>
+	
+	<div class="author_header">
+	<img src="images/jason_header.png" alt="jason_image">
+	</div>
+	<h3>Jason Wan</h3>
+	<div class="authorText">
+	<p>3rd Year ITMB Student at Glasgow Caledonian University</p>
+	</div>
+	
+	<div class="author_header"><img src="images/andrew_header.png" alt="andrew_image"></div>
+	<h3>Andrew Hart</h3>
+	<div class="authorText">
+	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	</div>
+	
+	<div class="author_header"><img src="images/ross_header.png" alt="ross_image"></div>
+	<h3>Ross McGregor</h3>
+	<div class="authorText">
+	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	</div>
+	
+	<div class="author_header"><img src="images/fraser_header.png" alt="fraser_image"></div>
+	<h3>Fraser Watt</h3>
+	<div class="authorText">
+	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	</div>
+	
+	<div class="author_header"><img src="images/kiera_header.png" alt="kiera_image"></div>
+    <h3>Kiera Morrison</h3>
+	<div class="authorText">
+	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
+	</div>
+	
     </body>
-<html>
+</html>
