--- a/WEBSITE/earthquakes.html
+++ b/WEBSITE/earthquakes.html
@@ -5,7 +5,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCtAqEPKCwtioxmtQeR5tac5DYAdSpTJM"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquakes and Weather - Earthquakes</title>
+        <title>Earthquake Maps</title>
     </head>
     <header>
     <div class="test">
@@ -41,5 +41,6 @@
         <script src="scripts/googleMapsScript.js"></script>
         <div id="mapLayout"></div>
     </div>
+	
     </body>
-<html>
+</html>
