--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -29,9 +29,10 @@
 	<img class="header" src="Images/tornado.jpg" width="1920" height="100"/>
 </header>
     <body>
+	<h2>Tornados</h2>
 		<div id="tornados"> 
-		<script src = "scripts/hurricanescript.js"></script>
+		<script src = "scripts/tornados.js"></script>
 
 		</div>
     </body>
-<html>
+</html>
