--- a/WEBSITE/tutorial_earthquake.html
+++ b/WEBSITE/tutorial_earthquake.html
@@ -6,7 +6,7 @@
 
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Weather Forecast</title>
+        <title>Weather Tutorial</title>
     </head>
     <header>
     <div class="test">
@@ -28,26 +28,8 @@
 </header>
 
     <body>
-	<div class="row" style="margin-bottom:20px;">
-		<h1 class="text-center text-primary">Enter City Name or Latitude/Longitude</h1>
-	</div>
-	
-	<div id="error"></div>
-	
-	<div class="row form-group form-inline" id="rowDiv">
-		<input type="text" name="city" id="city" class="form-control" placeholder="City Name">
-		<input type="text" name="latitude" id="latitude" class="form-control" placeholder="Latitude">
-        <input type="text" name="longitude" id="longitude" class="form-control" placeholder="Longitude">
-		<button id="submitWeather" class="btn btn-primary">Search</button>
-		</div>
-	<br>
-		<div id="show" class="infoWeather"></div>
-		
-		<div id="mapLayout" class="contentWeather"></div>
-		
-	<div class="weather_image">
-	<script src="scripts/weather.js"></script>
-	</div>
-	
-    </body>
+	<h2>Earthquake Tutorial</h2>
+	<p> 
+	</p>
+	</body>
 </html>
