--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="scripts/hamburgerMenu.js"></script>
     <head>
-        <title>Earthquakes and Weather - Home</title>
+        <title>Home</title>
     </head>
     <header>
     <div class="test">
@@ -36,4 +36,4 @@
         </div>
     </div>
     </body>
-<html>
+</html>
