Flights Page added with working flight tracker

--- a/WEBSITE/flights.html
+++ b/WEBSITE/flights.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!--<link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">-->
+<link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="flights.js"></script>
@@ -12,7 +12,7 @@
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAOk3ehzSry341HZu-V8jWqhT4bQuPyk9U&callback=initMap">
 </script>
 
-<!--<script src="scripts/hamburgerMenu.js"></script>-->
+<script src="scripts/hamburgerMenu.js"></script>
 
 <title>Flights Page</title>
 
@@ -25,39 +25,29 @@
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
-            <a href="">Plane Tracker</a>
-            <a href="">Tornados</a>
+            <a href="flights.html">Plane Tracker</a>
+            <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
-            <i class="fa fa-bars"></i>
-            </a>  
-        </div>
+            <i class="fa fa-bars"></i> 
+            </a>
     </div>
+</div>
+<img class="header" src="Images/planeheader.png"/>
 
 
-<body id = "flightbody">
+<body>
 
-<button type="button" id="flights">View Flights</button>
+    <button id="flights" class="btn btn-primary">View Flights</button>
 
-<br>
+    <div id="mapLayout"></div>
 
- <div id="map"></div>
-   <style>
-   
-   #map {
-        height: 400px; 
-        width: 60%;  
-       }
-	   
-    </style>
-	
- <div id="planeIcon"></div>	
- 
- 
-	
-<section id="content">
+    <div id="planeIcon"></div>	
 
-	
-</section>
+
+    <section id="content">
+    </section>
+
+    <script src="scripts/flights.js"></script>
 </body>
 </html>
