--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -19,7 +19,7 @@
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
             <a href="">Floods</a>
-            <a href="">Plane Tracker</a>
+            <a href="flights.html">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
