--- a/WEBSITE/index.html
+++ b/WEBSITE/index.html
@@ -13,7 +13,7 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
-            <a href="">Floods</a>
+            <a href="Flood.html">Floods</a>
             <a href="flights.html">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
