Flood data updated onto main website

--- a/WEBSITE/authors.html
+++ b/WEBSITE/authors.html
@@ -13,7 +13,7 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
-            <a href="">Floods</a>
+            <a href="Flood.html">Floods</a>
             <a href="flights.html">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
@@ -28,46 +28,48 @@
     <div class="content">
     
 	<h2>Authors</h2>
-	
+	<div class="authorCentre">
 	<div class="author_header">
-	<img src="images/calum_header.png" alt="calum_image">
+	<img src="images/calum_header.png" alt="calum_image" class="centre">
 	</div>
+    
 	<h3>Calum McDonald</h3>
 	<div class="authorText">
 	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
 	</div>
 	
 	<div class="author_header">
-	<img src="images/jason_header.png" alt="jason_image">
+	<img src="images/jason_header.png" alt="jason_image" class="centre">
 	</div>
 	<h3>Jason Wan</h3>
 	<div class="authorText">
 	<p>3rd Year ITMB Student at Glasgow Caledonian University</p>
 	</div>
 	
-	<div class="author_header"><img src="images/andrew_header.png" alt="andrew_image"></div>
+	<div class="author_header"><img src="images/andrew_header.png" alt="andrew_image" class="centre"></div>
 	<h3>Andrew Hart</h3>
 	<div class="authorText">
 	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
 	</div>
 	
-	<div class="author_header"><img src="images/ross_header.png" alt="ross_image"></div>
+	<div class="author_header"><img src="images/ross_header.png" alt="ross_image" class="centre"></div>
 	<h3>Ross McGregor</h3>
 	<div class="authorText">
 	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
 	</div>
 	
-	<div class="author_header"><img src="images/fraser_header.png" alt="fraser_image"></div>
+	<div class="author_header"><img src="images/fraser_header.png" alt="fraser_image" class="centre"></div>
 	<h3>Fraser Watt</h3>
 	<div class="authorText">
 	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
 	</div>
 	
-	<div class="author_header"><img src="images/kiera_header.png" alt="kiera_image"></div>
+	<div class="author_header"><img src="images/kiera_header.png" alt="kiera_image" class="centre"></div>
     <h3>Kiera Morrison</h3>
 	<div class="authorText">
 	<p>3rd Year Computing Student at Glasgow Caledonian University</p>
 	</div>
+    </div>
 	
     </body>
 </html>
