--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -17,7 +17,7 @@
                 <a href="earthquakes.html">Earthquakes</a> 
                 <a href="weather.html">Weather</a>
                 <a href="uvIndex.html">UV Index</a>
-                <a href="">Floods</a>
+                <a href="Flood.html">Floods</a>
                 <a href="flights.html">Plane Tracker</a>
                 <a href="tornados.html">Tornados</a>
                 <a href="authors.html">Authors</a>
@@ -26,13 +26,11 @@
                 </a>  
             </div>
         </div>
-	<img class="header" src="Images/tornado.jpg" width="1920" height="100"/>
+	<img class="header" src="Images/tornadoheader.png">
 </header>
     <body>
-	<h2>Tornados</h2>
 		<div id="tornados"> 
 		<script src = "scripts/tornados.js"></script>
-
 		</div>
     </body>
 </html>
