--- a/WEBSITE/flights.html
+++ b/WEBSITE/flights.html
@@ -24,7 +24,7 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
-            <a href="">Floods</a>
+            <a href="Flood.html">Floods</a>
             <a href="flights.html">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
@@ -37,9 +37,9 @@
 
 
 <body>
-
-    <button id="flights" class="btn btn-primary">View Flights</button>
-
+    <div class="buttonsEQ">
+        <button id="flights" class="btn btn-primary">View Flights</button>
+    </div>
     <div id="mapLayout"></div>
 
     <div id="planeIcon"></div>	
