Tornados back and next button working

--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -2,7 +2,6 @@
 <link href="css_files/style_sheets.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src = "scripts/hurricanescript.js"></script>
 <link href = "https://api.predicthq.com/v1/events/?label=wind/">
 
 <script src="scripts/hamburgerMenu.js"></script>
@@ -29,6 +28,8 @@
 	<img class="header" src="Images/tornadoheader.png">
 </header>
     <body>
+        <button id="backT">Back Button</button>
+        <button id="nextT">Next Button</button>
 		<div id="tornados"> 
 		<script src = "scripts/tornados.js"></script>
 		</div>
