--- a/WEBSITE/Flood.html
+++ b/WEBSITE/Flood.html
@@ -18,12 +18,16 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
+            <a href="Flood.html">Floods</a>
+            <a href="flights.html">Plane Tracker</a>
+            <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
             <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
             <i class="fa fa-bars"></i>
             </a>  
         </div>
     </div>
+        <img class="header" src="Images/floodsHeader.png"/>
 </header>
     <body>
     <!--<div class="content">-->
