Tutorials and links added

--- a/WEBSITE/uvIndex.html
+++ b/WEBSITE/uvIndex.html
@@ -9,7 +9,7 @@
         
 <script src="scripts/uv.js"></script>
 <head>
-    <title>Earthquakes and Weather - UV Index</title>
+    <title>UV Index</title>
 </head>
 <header>
     <div class="test">
