--- a/WEBSITE/flights.html
+++ b/WEBSITE/flights.html
@@ -24,7 +24,7 @@
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
             <a href="uvIndex.html">UV Index</a>
-            <a href="Flood.html">Floods</a>
+            <a href="">Floods</a>
             <a href="flights.html">Plane Tracker</a>
             <a href="tornados.html">Tornados</a>
             <a href="authors.html">Authors</a>
@@ -37,12 +37,10 @@
 
 
 <body>
-    <div class="buttonsEQ">
-        <button id="flights" class="btn btn-primary">View Flights</button>
-    </div>
-    <div id="mapLayout"></div>
 
-    <div id="planeIcon"></div>	
+    <button id="flights" class="btn btn-primary">View Flights</button>
+
+    <div id="mapLayout"></div>
 
 
     <section id="content">
