Add EQ Tutorial Page + Old Nav Bar

--- a/WEBSITE/flights.html
+++ b/WEBSITE/flights.html
@@ -19,7 +19,7 @@
 </head>
 
 <div class="test">
-        <div class="topnavEQ" id="myTopnav">
+        <div class="topnav" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
