--- a/WEBSITE/tornados.html
+++ b/WEBSITE/tornados.html
@@ -11,7 +11,7 @@
     <header>
 
         <div class="test">
-            <div class="topNav" id="myTopnav">
+            <div class="topnav" id="myTopnav">
                 <a href="index.html">Home</a>
                 <a href="earthquakes.html">Earthquakes</a> 
                 <a href="weather.html">Weather</a>
