--- a/WEBSITE/tutorial_weather.html
+++ b/WEBSITE/tutorial_weather.html
@@ -10,7 +10,7 @@
     </head>
     <header>
     <div class="test">
-        <div class="topnavEQ" id="myTopnav">
+        <div class="topnavBlack" id="myTopnav">
             <a href="index.html">Home</a>
             <a href="earthquakes.html">Earthquakes</a> 
             <a href="weather.html">Weather</a>
